--- a/backend/backend/src/main/resources/application.properties
+++ b/backend/backend/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=backend
+
+spring.datasource.url=jdbc:mysql://localhost:3306/focusphysique
+spring.datasource.username= administrador
+spring.datasource.password= 1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuración de JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
