--- a/backend/backend/src/main/resources/application.properties
+++ b/backend/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=backend
 
-spring.datasource.url=jdbc:mysql://localhost:3306/focusphysique
+spring.datasource.url=jdbc:mysql://localhost:3306/focusphysiques
 spring.datasource.username= administrador
 spring.datasource.password= 1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
